base/production/hello-world-client-java/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-client-java
  namespace: production
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: hello-world-client-java
  template:
    metadata:
      labels:
        app: hello-world-client-java
        version: "N/A" # replaced from kustomization.yaml
    spec:
      containers:
        - name: hello-world-client-java
          image: patinanetwork/hello-world-client-java
          ports:
            - name: http-web
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http-web
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-web
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "256Mi"
              cpu: "250m"
