base/production/hello-world-client-java/ingress-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-client-java-vpn-web
  namespace: production
spec:
  entryPoints:
    - web-vpn
  routes:
    - match: Host(`hello-world-grpc-client-java.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: hello-world-client-java
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-client-java-vpn-websecure
  namespace: production
spec:
  entryPoints:
    - websecure-vpn
  routes:
    - match: Host(`hello-world-grpc-client-java.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: hello-world-client-java
          port: 80
  tls:
    secretName: production-hello-world-client-java-vpn-tls
